Fix email subscription button getting cut off in tablet view

--- a/styleguide/source/assets/scss/02-molecules/_subscribe-promo.scss
+++ b/styleguide/source/assets/scss/02-molecules/_subscribe-promo.scss
@@ -16,7 +16,6 @@
       margin: 0 auto;
       padding: $gutter / 2.2;
       border: 0;
-      height: 49px;
 
       &:hover {
         background: $hoverPurple;
